implement ui for on going call

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.14",
     "flowbite": "^1.8.1",
     "flowbite-svelte": "^0.44.17",
+    "flowbite-svelte-icons": "^0.4.4",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.5",
