update port for production

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host --port 5173"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
